<resources>
    <string name="app_name">Smart Hike</string>
    <string name="welcome_to_vision">Welcome To Vision</string>
    <string name="todo">TODO</string>
    <string name="powered_by">Powered By</string>
    <string name="ai">AI</string>
    <string name="thener_studio">Thener Studio</string>
    <string name="designed_by">Designed By</string>
    <string name="proceed">Proceed</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="enter_code_number">Enter code number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="on_step_more">One more step..</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="driver_sign_up">DRIVER SIGN UP</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="id_number">ID Number</string>
    <string name="car_number_plate">Car Number Plate</string>
    <string name="scan_number_plate">Scan Number plate</string>
    <string name="scan_id">Scan ID</string>
    <string name="passenger_sign_up">Passenger Sign Up</string>
    <string name="or">OR</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_passenger">PassengerActivity</string>
    <string name="car_model">Car Model</string>
    <string name="upload_picture_of_your_car">Upload picture of your car</string>
</resources>
