<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mlambo.smarthike.Authentication.PasangerSignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/passenger_sign_up"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/Input_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/Input_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/id_number"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/Proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/buttons"
        android:text="@string/proceed"
        android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
