<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_step_more"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:fontFamily="@font/lato"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/driverBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textSize="16sp"
            android:layout_weight="1"
            android:background="@color/buttons"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/passengerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/passenger"
            android:textSize="16sp"
            android:background="@color/fui_buttonShadow"
            android:textColor="@color/text"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>