<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.PhoneAuth">

    <LinearLayout
        android:id="@+id/Linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_your_phone_number"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Linear_1">

        <ImageView
            android:id="@+id/phone"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_call"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/PhoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/your_phone_number"
            android:inputType="phone"
            android:textColorHint="@color/text"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,TextFields" />

        <ProgressBar
            android:id="@+id/PhoneProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout
        >

    <LinearLayout
        android:id="@+id/Code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/phone_layout">

        <ImageView
            android:id="@+id/lock"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_security"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/CodeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textColorHint="@color/text"
            android:hint="@string/enter_code_number"
            android:inputType="number"
            android:textSize="16sp"
            android:visibility="visible"
            tools:ignore="RtlHardcoded,TextFields"
            tools:visibility="invisible" />

        <ProgressBar
            android:id="@+id/CodeProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <TextView
        android:id="@+id/msgText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="A Verification Code Will Be Sent to Your Phone \n Number"
        android:textAlignment="center"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/Send_Verification_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <Button
        android:id="@+id/Send_Verification_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/buttons"
        android:text="send verification"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</android.support.constraint.ConstraintLayout>